<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:paddingBottom="24dp"
                                             android:background="@color/box">
    <TextView
            android:text="@string/listNameView"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/listNameView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@+id/listPriceView"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/listPriceView"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:id="@+id/listPriceView"
            android:textSize="18sp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/listNameView"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/editListButton"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/edit_button"
            android:id="@+id/editListButton"
            android:background="@null" app:layout_constraintStart_toEndOf="@+id/listPriceView"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/todo"/>

</android.support.constraint.ConstraintLayout>