<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:paddingBottom="24dp">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:text="@string/editNamePlaceholder"
            android:ems="10"
            android:id="@+id/nameFormItem"
            android:singleLine="true"
            android:gravity="center_vertical|center_horizontal|center"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints=""
            app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/priceFormItem"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/nameLabel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintBaseline_toBaselineOf="@+id/nameFormItem" android:autoText="false"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/nameFormItem"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/priceFormItem"
            android:text="@string/editPricePlaceholder"
            android:gravity="center_vertical|center_horizontal|center"
            app:layout_constraintStart_toEndOf="@+id/textView" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameFormItem"
            app:layout_constraintBottom_toTopOf="@+id/submitEditItem" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/priceLabel"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:autoText="false"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/priceFormItem"
            app:layout_constraintBaseline_toBaselineOf="@+id/priceFormItem" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    <Button
            android:text="@string/editItemString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitEditItem"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:background="@color/buttonColor"
            android:textColor="@color/box"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/priceFormItem" android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/editItemString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@+id/nameFormItem"
            app:layout_constraintVertical_bias="0.3"/>

</android.support.constraint.ConstraintLayout>