<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/background">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/emptyString"
            android:ems="10"
            android:id="@+id/newListName"
            android:singleLine="true" android:gravity="center_vertical|center_horizontal|center"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintTop_toBottomOf="@+id/newListViewTitle" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/submitNewList" android:layout_marginTop="32dp"/>
    <Button
            android:text="@string/submitNewListName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitNewList"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newListName" app:layout_constraintHorizontal_bias="0.5"
            android:background="@color/buttonColor" android:textColor="@color/box" android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/newListViewTitleString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newListViewTitle"
            tools:textSize="24dp" android:gravity="center_vertical|center_horizontal|center"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/newListName"
            app:layout_constraintVertical_chainStyle="packed" android:textSize="30sp"
            app:layout_constraintVertical_bias="0.19999999"/>
</android.support.constraint.ConstraintLayout>